--- a/DeviceSettings/res/values/strings.xml
+++ b/DeviceSettings/res/values/strings.xml
@@ -15,23 +15,13 @@
     <string name="device_title">OnePlus Settings</string>
     <string name="device_summary">Adjust OnePlus specific device settings</string>
     <string name="display_title">Display</string>
-    <string name="srgb_mode_summary"></string>
-    <string name="srgb_mode_title">sRGB mode</string>
     <string name="hbm_mode_summary"></string>
     <string name="hbm_mode_title">High brightness mode</string>
     <string name="auto_hbm_summary"></string>
     <string name="auto_hbm_title">Automatic High brightness mode</string>
+    <string name="hbm_mode_warning">Long time usage of High brightness mode may damage your display</string>
     <string name="auto_hbm_threshold_title">Automatic High brightness mode threshold (lux)</string>
     <string name="auto_hbm_threshold_summary"></string>
-    <string name="wide_color_mode_title">Wide Color mode</string>
-    <string name="dci_mode_summary"></string>
-    <string name="dci_mode_title">DCI-P3 wide colour gamut mode</string>
-    <string name="Night_mode_summary"></string>
-    <string name="Night_mode_title">Night mode</string>
-    <string name="panel_category_title">Panel modes</string>
-    <string name="panel_category_summary">Modes for panel color correction</string>
-    <string name="off_mode_title">Off</string>
-    <string name="tile_panel_mode">Panel modes</string>
     <string name="dc_mode_summary"></string>
     <string name="dc_mode_title">DC-Dimming</string>
     <string name="tile_hbm_mode">High brightness modes</string>
@@ -48,10 +38,6 @@
     <string name="fps_info_title">FPS overlay</string>
     <string name="fps_info_summary">Show overlay with with current frames per second</string>
     <string name="panel_mode_info">Disable panel mode requires reboot.</string>
-    <!-- Doze -->
-    <string name="doze_panel_title">Doze</string>
-    <string name="doze_settings_title">Advanced doze settings</string>
-    <string name="doze_settings_summary">Handle sensor related wake events</string>
 
     <!-- Notification slider -->
     <string name="notification_slider_category_title">Notification slider</string>
@@ -72,10 +58,21 @@
     <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
     <string name="vibration_warning">Setting strength too high may cause permanent hardware damage</string>
 
-    <!-- Log Tile -->
-    <string name="quick_settings_log_tile_label">LogTile</string>
-    <string name="quick_settings_log_tile_dialog_title">Options</string>
-    <string name="cannot_get_su">Action failed because of missing superuser access</string>
+    <!-- Doze -->
+    <string name="doze_panel_title">Doze</string>
+    <string name="doze_settings_title">Advanced doze settings</string>
+    <string name="doze_settings_summary">Handle sensor related wake events</string>
+
+    <!-- Selinux Switch -->
+    <string name="selinux_explanation_summary">SELinux is a set of kernel modifications and user-space tools. Changing modes can cause unwanted effects. Use at your own risk (will be grayed out if su not found!).</string>
+    <string name="selinux_category">SELinux</string>
+    <string name="selinux_mode_title">SELinux mode</string>
+    <string name="selinux_permissive_summary">Permissive</string>
+    <string name="selinux_enforcing_summary">Enforcing</string>
+    <string name="selinux_persistence_title">Persist across reboots</string>
+    <string name="selinux_persistence_summary">Restore the above set sepolicy mode on each boot</string>
+    <string name="selinux_permissive_toast_title">Selinux set to permissive!</string>
+    <string name="selinux_enforcing_toast_title">Selinux set to enforcing!</string>
 
     <!-- Slider toasts -->
     <string name="slider_toast_normal">Calls and notifications will ring</string>
@@ -83,4 +80,17 @@
     <string name="slider_toast_dnd">DND - No interruptions</string>
     <string name="slider_toast_priority">DND - Priority only</string>
     <string name="slider_toast_silent">Calls and notifications will be muted</string>
+    
+    <!-- Log Tile -->
+    <string name="quick_settings_log_tile_label">LogTile</string>
+    <string name="quick_settings_log_tile_dialog_title">Options</string>
+    <string name="cannot_get_su">Action failed because of missing superuser access</string>
+    
+    <!-- Dolby Atmos -->
+    <string name="audio_title">Dolby Atmos</string>
+    <string name="dolby_title">Configuration</string>
+    <string name="dolby_summary">Configure the audio output based on media content.</string>
+    <string name="enable_dolby_title">Enable/Disable Dolby Atmos</string>
+    <string name="enable_dolby_summary">Switching REQUIRES a reboot to take effect!</string>
+    <string name="enable_dolby_info">Note: With Dolby Atmos enabled, other EQ effects like MusicFX are disabled on all outputs.</string>
 </resources>
